tests/negative_pomidory/data_file.pomidor
App Name:
Version:
Release date:

Sprint:

!!test_pomidor_PomidorDataFeedNoAngleKeysProvided!!
@data pageObjects/csv_data_source.csv
@feature csv_data3
crazytomato -1
First, click on login_field #practice_menu_button page title
and type [[text-1]]in #name_field. Then, type [[some
free text]] in #name_field


!!test_pomidor_PomidorDataFeedNoCSVFileProvided!!
@feature csv_data4
crazytomato -1
First, click on login_field #practice_menu_button page title
and type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field


!!Used for test_pomidor_csv_data!!
@Feature CSV_data
@param prereq=Login, delete_cookies, full_screen
@DATA   pageObjects/csv_data_source.csv
@url     practice_page
@name   CSV_Test_case#1
!!Comment first line - First, click on login_field #practice_menu_button page title
and type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field,
 and types <<City of
Birth>> in #name_field
and again and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field

!!Used for test_pomidor_csv_data!!
@Feature CSV_data
@precond Login
@param   delete_cookies, full_screen
@DATA   pageObjects/csv_data_source.csv
@url     practice_page
@story   CSV_Test_case!
!!Comment first line - First, click on login_field #practice_menu_button page title
Second CSV scenario
and type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field,
 and types <<City of
Birth>> in #name_field
and again and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field

!!Used by test_pomidor_feature_list_csv_data1!!
@feature CSV_data1, csv_data2
@data pageObjects/csv_data_source.csv
First, click on login_field #practice_menu_button page title
and type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field,
 and types <<City of
Birth>> in #name_field
and again and then type <<LastName>> in #name_field
and type [[Yo!]] in #name_field

Sprint#2:

!!Used for test_pomidor_csv_data_none_key_error!!
@feature csv_data7
@data pageObjects/csv_data_source.csv
crazytomato -1
2-First, Click on login_field #practice_menu_button page title
2-and TyPE <<FirstNam9e>> in #name_field. Then, type 2- [[2-second
!! This is a comment
free
text]] in #name_field, !! not valid comment
""driver.wait(2)
""driver.quit()
2- and types <<City of
Birth>> in #name_field
2-and again